tests/NormalTests/paczka1/small_fuzzy/82435676.err
Error in line 1: iiK S63 0,3
Error in line 2: iiK A194 71,6
Error in line 4: iiK S63 30,2
Error in line 7: iiK A194 59,1
